--- a/css/saturn.css
+++ b/css/saturn.css
@@ -79,12 +79,14 @@ body {
     margin-bottom: 2em; /* Add margin at the bottom */
     float: right;
     text-align: left; /* Align text to the left */
+    margin-right: 20px;
 }
 
 #itinerary {
     width: 48%;
     margin-bottom: 2em; /* Add margin at the bottom */
     float: left;
+    margin-left: 20px;
 }
 
 #moon2 {        
