--- a/css/uranus.css
+++ b/css/uranus.css
@@ -1,23 +1,7 @@
+@import url('style.css');
+
 header {
     text-align: center;
-    margin-top: 5%;
-}
-
-h1 {
-    background: linear-gradient(to right, #e2bfff, #ffe6b0); /* Light gradient */
-    text-align: center;
-    width: 15%;
-    margin: 1% auto; /* Center the element horizontally and add margin */
-    padding: 1%;
-    border-radius: 1em; /* Rounded corners */
-}
-
-h2 {
-    text-decoration: underline;
-    text-align: center;
-    width: 15%;
-    margin: 1% auto; /* Center the element horizontally and add margin */
-    padding: 1%;
     margin-top: 5%;
 }
 
@@ -40,15 +24,6 @@ button:hover {
     background-color: #946fb3fa;
 }
 
-p {
-    word-wrap: break-word;
-    width: 60%;
-    text-align: center;
-    margin: 0 auto; 
-    margin-top: 1%;
-    margin-bottom: 1%;
-}
-
 /* Table styles */
 table {
     margin: 0 auto; 
@@ -63,13 +38,6 @@ footer {
     margin-top: auto; /* Push footer to the bottom */
 }
 
-section {
-    background-color: #e6e6fa;
-    padding: 2em;
-    border-radius: 1em;
-    margin-bottom: 3em;
-}
-
 .header h1 {
     position: fixed;
     top: 0;
@@ -78,18 +46,6 @@ section {
     font-size: 24px; /* Adjust font size as needed */
     font-weight: bold; /* Adjust font weight as needed */
     color: #000000; /* Set text color as needed */
-}
-
-#composition, #itinerary, #planet-info, #sightseeing, #trip-cost {
-    background-color: #e6e6fa; /* Light Purple */
-    padding: 2em;
-    border-radius: 1em;
-}
-
-#planet-info {
-    width: 100%;
-    text-align: center; /* Center the content */
-    box-sizing: border-box;
 }
 
 #itinerary {
